--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,10 @@ php:
   - 5.3
   - 5.4
   - 5.5
+before_script:
+  - composer install
 install:
   - pip install unittest-data-provider
-  - composer update
 script:
   - python cryptexttest.py
   - phpunit
