--- a/.travis.yml
+++ b/.travis.yml
@@ -11,10 +11,12 @@ php:
   - 5.3
   - 5.4
   - 5.5
-before_script:
-  - composer install
 install:
   - pip install unittest-data-provider
+  - sudo apt-get install php5 phpunit
+  - wget https://getcomposer.org/download/1.0.0-alpha10/composer.phar
+before_script:
+  - php composer.phar install
 script:
   - python cryptexttest.py
   - phpunit
