--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ php:
   - 5.5
 install:
   - pip install unittest-data-provider
+  - sudo apt-get update
   - sudo apt-get install php5 phpunit
   - wget https://getcomposer.org/download/1.0.0-alpha10/composer.phar
 before_script:
