--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,8 @@ php:
 install:
   - pip install unittest-data-provider
   - sudo apt-get update
+  - sudo apt-get install python-software-properties
+  - sudo add-apt-repository ppa:ondrej/php5
   - sudo apt-get install php5 phpunit
   - wget https://getcomposer.org/download/1.0.0-alpha10/composer.phar
 before_script:
