--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,10 @@ language:
   - python
   - php
 python:
-  - 2.6
-  - 2.7
-  - 3.2
-  - 3.3
+#  - 2.6
+#  - 2.7
+#  - 3.2
+#  - 3.3
   - 3.4
 php:
   - 5.3
@@ -15,7 +15,7 @@ install:
   - pip install unittest-data-provider
   - sudo apt-get update
   - sudo apt-get install -y python-software-properties
-  - sudo add-apt-repository -y ppa:ondrej/php5
+  - sudo add-apt-repository -y ppa:ondrej/php5-5.6
   - sudo apt-get install -y php5 phpunit
   - wget https://getcomposer.org/download/1.0.0-alpha10/composer.phar
 before_script:
