--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,3 @@
-language:
-  - python
-  - php
-python:
-#  - 2.6
-#  - 2.7
-#  - 3.2
-#  - 3.3
-  - 3.4
-php:
-  - 5.3
-  - 5.4
-  - 5.5
-install:
-  - pip install unittest-data-provider
-  - sudo apt-get update
-  - sudo apt-get install -y python-software-properties
-  - sudo add-apt-repository -y ppa:ondrej/php5-5.6
-  - sudo apt-get install -y php5 phpunit
-  - wget https://getcomposer.org/download/1.0.0-alpha10/composer.phar
-before_script:
-  - php composer.phar install
-script:
-  - python cryptexttest.py
-  - phpunit
+language: php
+php: 5.6
+before_script: composer install
