--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
   },
   "minimum-stability": "dev",
   "require-dev": {
-    "phpunit/phpunit": "4.4.*"
+    "phpunit/phpunit": "4.4.*",
+    "symfony/console": "2.6.*"
   },
   "autoload": {
     "psr-4": {"ReenExe\\Cryptext\\": "src/"}
