--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,8 @@
   "minimum-stability": "dev",
   "require-dev": {
     "phpunit/phpunit": "4.4.*",
+    "symfony/yaml": "2.6.*",
+    "symfony/options-resolver": "2.6.*",
     "symfony/console": "2.6.*"
   },
   "autoload": {
