--- a/composer.json
+++ b/composer.json
@@ -3,14 +3,15 @@
   "version": "1.0.0",
   "type": "library",
   "require": {
-    "php": ">=5.4"
-  },
-  "minimum-stability": "dev",
-  "require-dev": {
-    "phpunit/phpunit": "4.4.*",
+    "php": ">=5.4",
+    "symfony/filesystem": "^3.0",
     "symfony/yaml": "2.6.*",
     "symfony/options-resolver": "2.6.*",
     "symfony/console": "2.6.*"
+  },
+  "minimum-stability": "dev",
+  "require-dev": {
+    "phpunit/phpunit": "4.4.*"
   },
   "autoload": {
     "psr-4": {"ReenExe\\Cryptext\\": "src/"}
