--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
   },
   "minimum-stability": "dev",
   "require-dev": {
-    "phpunit/phpunit": "4.4.*"
+    "phpunit/phpunit": "4.4.*",
     "symfony/var-dumper": "^3.0"
   },
   "autoload": {
