--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "symfony/filesystem": "^3.0",
     "symfony/yaml": "2.6.*",
     "symfony/options-resolver": "2.6.*",
-    "symfony/console": "2.6.*"
+    "symfony/console": "2.6.*",
+    "behat/behat": "^3.0"
   },
   "minimum-stability": "dev",
   "require-dev": {
