--- a/behat.yml
+++ b/behat.yml
@@ -13,6 +13,6 @@ default:
              paths:
                 - %paths.base%/src/Features
              contexts:
-                 - ReenExe\Cryptext\Features\Context\DefaultContext
+                 - ReenExe\Cryptext\Features\Context\FileSystemContext
              filters:
                  tags: "@command"
