--- a/composer.json
+++ b/composer.json
@@ -7,13 +7,14 @@
         "symfony/filesystem": "^3.0",
         "symfony/yaml": "2.6.*",
         "symfony/options-resolver": "2.6.*",
-        "symfony/console": "2.6.*",
-        "behat/behat": "^3.0"
+        "symfony/console": "2.6.*"
     },
     "minimum-stability": "dev",
     "require-dev": {
         "phpunit/phpunit": "4.4.*",
-        "symfony/var-dumper": "^3.0"
+        "symfony/var-dumper": "^3.0",
+        "behat/behat": "^3.0",
+        "symfony/process": "^3.0"
     },
     "autoload": {
         "psr-4": {
