--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,10 @@
     },
     "minimum-stability": "dev",
     "require-dev": {
-        "phpunit/phpunit": "4.4.*",
         "symfony/var-dumper": "^3.0",
         "behat/behat": "^3.0",
-        "symfony/process": "^3.0"
+        "symfony/process": "^3.0",
+        "codeception/codeception": "^2.1"
     },
     "autoload": {
         "psr-4": {
